--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,1 +1,30 @@
-<h1>about</h1>
+<section class="page about-page">
+    <h2>About us</h2>
+    <article class="about-article about-wendy flex">
+        <h3>Wendy Evora</h3>
+        <p class="about-info"></p>
+        <div class="about-link-box">
+            <a href="">Linkedin</a>
+            <a href="">Github</a>
+            <a href="">Website</a>
+        </div>
+    </article>
+    <article class="about-article about-andrew flex">
+        <h3>Andrew Nunez</h3>
+        <p class="about-info"></p>
+        <div class="about-link-box">
+            <a href="">Linkedin</a>
+            <a href="">Github</a>
+            <a href="">Website</a>
+        </div>
+    </article>
+    <article class="about-article about-nina flex">
+        <h3>Nina Gautreau</h3>
+        <p class="about-info"></p>
+        <div class="about-link-box">
+            <a href="">Linkedin</a>
+            <a href="">Github</a>
+            <a href="">Website</a>
+        </div>
+    </article>
+</section>
