--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,1 +1,15 @@
-<h1>Signin</h1>
+<section class="page signin-page">
+    <h2>Sign In</h2>
+    <form class="form signin-form" action="post" action="/auth/signin">
+        <div class="form-item flex">
+            <label for="email" class="form-label">E-mail</label>
+            <input name="email" class="form-input" id="signin-form-email" type="email" placeholder="email@domain.com" value="email@domain.com" required>
+        </div>
+        <div class="form-item flex">
+            <label for="password" class="form-label">Password</label>
+            <input name="password" class="form-input" id="signin-form-password" type="password" placeholder="••••••••" value="1234toto" required>
+        </div>
+        <button type="submit" class="form-button" id="signin-form-button">Log in</button>
+    </form>
+    <p>Don't have an account yet ? <a href="/auth/signup" class="form-link">Sign Up</a></p>
+</section>
