--- a/views/country.hbs
+++ b/views/country.hbs
@@ -10,8 +10,8 @@
                     <h2>{{country.name}}</h2>
                 </div>
                 <div class="country-header-status">
-                    <button type="button" id="country-status-visited" class="country-status-visited"></button>
-                    <button type="button" id="country-status-wishlist" class="country-status-wishlist"></button>
+                    <button type="button" id="country-status-visited" class="country-status-visited"><i class="fas fa-star"></i> Visited</button>
+                    <button type="button" id="country-status-wishlist" class="country-status-wishlist"><i class="fas fa-heart"></i> Wishlist</button>
                 </div>
             </div>
         </div>
@@ -36,6 +36,12 @@
             <button class="tips-category" type="button"><i class="fas fa-shopping-bag"></i> Shopping</button>
             <button class="tips-category" type="button"><i class="fas fa-info"></i> Info</button>
         </div>
-
+        <div class="tips-list">
+            {{#each tips}}
+            <article class="tip-container">
+                
+            </article>
+            {{/each}}
+        </div>
     </div>
 </section>
