--- a/views/country.hbs
+++ b/views/country.hbs
@@ -29,19 +29,73 @@
     </div>
     <div class="tips-box">
         <div class="tips-nav">
-            <button class="tips-category active" type="button"><i class="fas fa-wine-glass-alt"></i> Bars</button>
-            <button class="tips-category" type="button"><i class="fas fa-utensils"></i> Restaurants</button>
-            <button class="tips-category" type="button"><i class="fas fa-leaf"></i> Parks</button>
-            <button class="tips-category" type="button"><i class="fas fa-eye"></i> Monuments</button>
-            <button class="tips-category" type="button"><i class="fas fa-shopping-bag"></i> Shopping</button>
-            <button class="tips-category" type="button"><i class="fas fa-info"></i> Info</button>
+            <div class="tips-nav-list">
+                <button class="tips-category active" type="button"><i class="fas fa-wine-glass-alt"></i> Bars</button>
+                <button class="tips-category" type="button"><i class="fas fa-utensils"></i> Restaurants</button>
+                <button class="tips-category" type="button"><i class="fas fa-leaf"></i> Parks</button>
+                <button class="tips-category" type="button"><i class="fas fa-eye"></i> Monuments</button>
+                <button class="tips-category" type="button"><i class="fas fa-shopping-bag"></i> Shopping</button>
+                <button class="tips-category" type="button"><i class="fas fa-info"></i> Info</button>
+            </div>
+            <div class="tips-nav-add">
+                <button type="button">+</button>
+            </div>
         </div>
         <div class="tips-list">
             {{#each tips}}
             <article class="tip-container">
-                
+                <div class="tip-category">
+                    {{this.category}}
+                </div>
+                <div class="tip-content">
+                    <h3>{{this.name}}</h3>
+                    <span class="tip-location">{{this.city}}, {{this.country}}</span>
+                    <hr>
+                    <p class="tip-body">{{this.body}}</p>
+                    <span class="tip-address">{{this.address}}</span>
+                    <span class="tip-user">{{this.user}}</span>
+                </div>
             </article>
             {{/each}}
         </div>
     </div>
+    <form class="form tip-form hidden" action="/tips/add" method="post">
+        <div class="form-item flex">
+            <label for="category" class="form-label">Category</label>
+            <select name="category" class="form-input select" id="tip-form-category" required>
+                <option value="-1" disabled selected>Choose a category</option>
+                <option value="Bar">Bar</option>
+                <option value="Restaurant">Restaurant</option>
+                <option value="Museum">Museum</option>
+                <option value="Shopping">Shopping</option>
+                <option value="Garden">Garden</option>
+                <option value="Info">Info</option>
+            </select>
+        </div>
+        <div class="form-item flex">
+            <label for="name" class="form-label">Name</label>
+            <input name="name" class="form-input" id="tip-form-name" type="text" placeholder="Chez Louise" required>
+        </div>
+        <div class="form-item flex">
+            <label for="country" class="form-label">Country</label>
+            <input name="country" class="form-input disabled" id="tip-form-country" type="text" value="{{country.name}}" disabled required>
+        </div>
+        <div class="form-item flex">
+            <label for="city" class="form-label">City</label>
+            <input name="city" class="form-input" id="tip-form-city" type="text" placeholder="Bordeaux" required>
+        </div>
+        <div class="form-item flex">
+            <label for="body" class="form-label">Info</label>
+            <textarea name="body" class="form-input textarea" id="tip-form-body" type="text" placeholder="Type here"></textarea>
+        </div>
+        <div class="form-item flex">
+            <label for="address" class="form-label">Address</label>
+            <input name="address" class="form-input" id="tip-form-address" type="text" placeholder="12 rue Merlot // Saint-Pierre" required>
+        </div>
+        <div class="form-item flex">
+            <label for="user" class="form-label">By</label>
+            <input name="user" class="form-input" id="tip-form-user" type="text" value="{{currentUser.name}}" required>
+        </div>
+        <button class="form-button" id="tip-form-button" type="submit">Submit</button>
+    </form>
 </section>
