--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,30 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Worldmap</title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <header>
-        <div>
-            <h1>Worldmap</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="/"></a></li>
-                <li><a href="/about"></a></li>
-                {{#unless isLoggedIn}}
-                <li><a href="/auth/signin"></a></li>
-                <li><a href="/auth/signup"></a></li>
-                {{/unless}}
-                {{#if isLoggedIn}}
-                <li><a href="/user"></a></li>
-                <li><a href="/auth/signout"></a></li>
-                {{/if}}
-            </ul>
-        </nav>
-    </header>
+    {{> header}}
+
     {{{body}}}
-    <footer>
-        2020, Ironhack
-    </footer>
+    
+    {{> footer}}
 </body>
 </html>
