--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,16 +1,15 @@
 header{
     width: 100%;
-    padding: 0.5rem 1.5rem;
 }
 
 .header-nav{
+    width: 100%;
+    padding: 0.5rem 1.5rem;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-}
-
-.header-nav>a{
     font-family: 'Cabin Sketch', cursive;
+    font-size: 2em;
 }
 
 .header-nav li{
