--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,7 +8,7 @@
         <ul class="flex">
             {{#unless isLoggedIn}}
             <li><a href="/auth/signin">Log in</a></li>
-            <li><a href="/auth/signup"></a>Sign up</li>
+            <li><a href="/auth/signup">Sign up</a></li>
             {{/unless}}
             {{#if isLoggedIn}}
             <li><a href="/user">Profile</a></li>
