--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,6 +1,6 @@
 <section class="page signin-page">
     <h2>Sign In</h2>
-    <form class="form signin-form" action="post" action="/auth/signin">
+    <form class="form signin-form" method="post" action="/auth/signin">
         <div class="form-item flex">
             <label for="email" class="form-label">E-mail</label>
             <input name="email" class="form-input" id="signin-form-email" type="email" placeholder="email@domain.com" value="email@domain.com" required>
