--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,7 +12,7 @@
             {{/unless}}
             {{#if isLoggedIn}}
             <li><a href="/user">Profile</a></li>
-            <li><a href="/auth/signout">Log out</a></li>
+            <li><a href="/signout">Log out</a></li>
             {{/if}}
         </ul>
     </nav>
