--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,10 @@
-<section class="page home-page">
-    THE FUCKING <MAP></MAP>
+{{#unless isLoggedIn}}
+<div class="home-popup">
+    <div class="popup-close">
+        
+    </div>
+</div>
+{{/unless}}
+<section class="page home-page flex">
+    THE FUCKING MAP HERE
 </section>
