--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,4 +1,4 @@
-<section class="page user-page">
+<section class="page user-page flex">
     <div class="user-box">
         <div class="user-header">
             <div class="user-header-avatar">
