--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,6 +1,8 @@
 footer{
+    width: 100%;
     padding: 0.5rem;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
     font-family: 'Cabin Sketch', cursive;
     font-size: 2em;
 }
