--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,4 +1,4 @@
-<section class="page signin-page">
+<section class="page signin-page flex">
     <h2>Sign In</h2>
     <form class="form signin-form" method="post" action="/auth/signin">
         <div class="form-item flex">
