--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<section class="page signup-page">
+<section class="page signup-page flex">
     <h2>Sign Up</h2>
     <form class="form signup-form" method="post" action="/auth/signup">
         <div class="form-item flex">
