--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,11 +1,10 @@
 <header class="flex">
     <nav class="header-nav flex">
         <a class="header-title" href="/">Worldmap</a class="header-title">
-        <ul class="flex">
+        <ul class="nav-list flex">
             <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-        </ul>
-        <ul class="flex">
+            <li><a href="/guide">Guide</a></li>
+            <li><a href="/about">About us</a></li>
             {{#unless isLoggedIn}}
             <li><a href="/auth/signin">Log in</a></li>
             <li><a href="/auth/signup">Sign up</a></li>
