--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -5,4 +5,13 @@ footer{
     align-items: center;
     font-family: 'Cabin Sketch', cursive;
     font-size: 2em;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-top: 4px dotted black;
+}
+
+footer p{
+    margin: 0;
+    background: linear-gradient(to right, pink 0%, lightsalmon 50%, gold 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
