--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -9,7 +9,7 @@
             <label for="password" class="form-label">Password</label>
             <input name="password" class="form-input" id="signin-form-password" type="password" placeholder="••••••••" value="1234toto" required>
         </div>
-        <button type="submit" class="form-button" id="signin-form-button">Log in</button>
+        <button type="submit" class="signin-form-button" id="signin-form-button">Log in</button>
     </form>
     <p>Don't have an account yet ? <a href="/auth/signup" class="form-link">Sign Up</a></p>
 </section>
