--- a/views/country.hbs
+++ b/views/country.hbs
@@ -96,7 +96,7 @@
         </div>
         <div class="form-item flex">
             <label for="user" class="form-label">By</label>
-            <input name="user" class="form-input" id="tip-form-user" type="text" value="{{currentUser.name}}" required>
+            <input name="user" class="form-input" id="tip-form-user" type="text" value="{{currentUser.username}}" required>
         </div>
         <button class="form-button" id="tip-form-button" type="submit">Submit</button>
     </form>
