--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    margin-bottom: 1.5rem;
+    margin: 3rem 0;
 }
 
 .signin-form div{
@@ -17,10 +17,21 @@
     width: 150px;
     padding: 5px 10px;
     background: none;
+    font-size: 1em;
+}
+
+.signin-form button{
+    width: 300px;
+    background: none;
+    border: 1px solid black;
+    font-size: 1em;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .signin-page p{
     margin: 0;
+    margin-top: 1.5rem;
 }
 
 .signin-page a{
