--- a/views/country.hbs
+++ b/views/country.hbs
@@ -32,11 +32,11 @@
         <div class="tips-nav">
             <div class="tips-nav-list">
                 <button class="tips-category active" type="button"><i class="fas fa-wine-glass-alt"></i> Bars</button>
-                <button class="tips-category" type="button"><i class="fas fa-utensils"></i> Restaurants</button>
-                <button class="tips-category" type="button"><i class="fas fa-leaf"></i> Parks</button>
-                <button class="tips-category" type="button"><i class="fas fa-eye"></i> Monuments</button>
-                <button class="tips-category" type="button"><i class="fas fa-shopping-bag"></i> Shopping</button>
-                <button class="tips-category" type="button"><i class="fas fa-info"></i> Info</button>
+                <button class="tips-category" value="restaurant"><i class="fas fa-utensils"></i> Restaurants</button>
+                <button class="tips-category" value="park"><i class="fas fa-leaf"></i> Parks</button>
+                <button class="tips-category" value="monument"><i class="fas fa-eye"></i> Monuments</button>
+                <button class="tips-category" value="shopping"><i class="fas fa-shopping-bag"></i> Shopping</button>
+                <button class="tips-category" value="info"><i class="fas fa-info"></i> Info</button>
             </div>
             <div class="tips-nav-add">
                 <button type="button">+</button>
