--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,27 +5,27 @@
             <h3>Wendy Evora</h3>
             <p class="about-info">Hi my name is Wendy !</p>
             <div class="about-link-box">
-                <a href="">Linkedin</a>
-                <a href="">Github</a>
-                <a href="">Website</a>
+                <a target="_blank" href="">Linkedin</a>
+                <a target="_blank" href="">Github</a>
+                <a target="_blank" href="">Website</a>
             </div>
         </article>
         <article class="about-article about-andrew flex">
             <h3>Andrew Nunez</h3>
             <p class="about-info">Hi my name is Andrew !</p>
             <div class="about-link-box">
-                <a href="">Linkedin</a>
-                <a href="">Github</a>
-                <a href="">Website</a>
+                <a target="_blank" href="">Linkedin</a>
+                <a target="_blank" href="">Github</a>
+                <a target="_blank" href="">Website</a>
             </div>
         </article>
         <article class="about-article about-nina flex">
             <h3>Nina Gautreau</h3>
-            <p class="about-info">Hi my name is Nina !</p>
+            <p class="about-info">Gradient and flexbox enthusiast, I also like food and jazz concerts !</p>
             <div class="about-link-box">
-                <a href="">Linkedin</a>
-                <a href="">Github</a>
-                <a href="">Website</a>
+                <a target="_blank" href="https://www.linkedin.com/in/ninagautreau/">Linkedin</a>
+                <a target="_blank" href="https://github.com/Gorlanova">Github</a>
+                <a target="_blank" href="https://gorlanova.github.io/project-01-game-minesweeper/">Game</a>
             </div>
         </article>
     </div>
