--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,14 +1,11 @@
 <section class="page user-page flex">
     <div class="user-box">
-        <div class="user-header">
-            <div class="user-header-avatar">
-                <img src="{{currentUser.avatar}}" alt="{{currentUser.username}} avatar">
-            </div>
+        <div class="user-header flex">
             <div class="user-header-username">
                 <h2>{{currentUser.username}}</h2>
             </div>
         </div>
-        <div class="user-main">
+        <div class="user-main flex">
             <div class="user-main-visited">
                 <h3>Visited :</h3>
                 <ul>
