--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,5 +1,5 @@
 .about-container{
-    margin-top: 3rem;
+    margin-top: 2rem;
     justify-content: space-between;
     align-items: flex-start;
 }
@@ -9,4 +9,23 @@
     margin-bottom: 1.5rem;
     justify-content: center;
     align-items: center;
+    width: 30%;
+}
+
+.about-info{
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+@media screen and (max-width: 1020px){
+    .about-container{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about-article{
+        width: 80%;
+        max-width: 300px;
+        margin-bottom: 3rem;
+    }
 }
