--- a/public/css/guide.css
+++ b/public/css/guide.css
@@ -1,4 +1,31 @@
 .guide-article{
     flex-direction: row;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3rem;
+}
+
+.guide-img{
+    width: 40%;
+    height: auto;
+}
+
+.guide-text{
+    width: 60%;
+}
+
+@media screen and (max-width: 700px){
+    .guide-article{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 3rem;
+    }
+
+    .guide-img{
+        width: 80%;
+    }
+
+    .guide-text{
+        width: 80%;
+        text-align: center;
+    }
 }
