--- a/views/country.hbs
+++ b/views/country.hbs
@@ -1,11 +1,11 @@
 <section class="page country-page flex">
     <div class="country-box">
-        <div class="country-header">
+        <div class="country-header flex">
             <div class="country-header-img">
                 <img src="{{country.image}}" alt="{{country.name}} image">
             </div>
-            <div class="country-header-content">
-                <div class="country-header-title">
+            <div class="country-header-content flex">
+                <div class="country-header-title flex">
                     <img src="{{country.flag}}" alt="{{country.name}} flag">
                     <h2>{{country.name}}</h2>
                 </div>
