--- a/views/country.hbs
+++ b/views/country.hbs
@@ -20,7 +20,7 @@
                 <p>Main City : {{country.mainCity}}</p>
                 <p>Languages : {{country.languages}}</p>
                 <p>Currency : {{country.currency}}</p>
-                <p>{{country.info}}</p>
+                <p>Zone : {{country.info}}</p>
             </div>
         </div>
     </div>
