--- a/public/css/tips.css
+++ b/public/css/tips.css
@@ -1,7 +1,33 @@
 .tips-nav button{
-    color: aqua;
+    color: chocolate;
+    cursor: pointer;
 }
 
 button.is-active {
-    background: red;
+    background: goldenrod;
+}
+
+.tips-box {
+    color: rgb(250, 250, 248);
+    text-shadow: black 0.1em 0.1em 0.2em;
+    font-style: italic;
+}
+
+.form-item {
+    /* justify-content: space-evenly; */
+
+}
+
+label.form-label {
+    margin-right: 5%;
+}
+
+.form-button {
+    display: inline-block;
+    padding: 1% 5%;
+    margin-top: 2%;
+    border-radius: 52rem;
+    background: chocolate;
+    color: rgb(250, 250, 248);
+    text-shadow: black 0.1em 0.1em 0.2em;
 }
