--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script type="module" src="/js/client.js"></script>
+    <script type="module" src="/js/main.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
