--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,11 +9,11 @@
 @import "./signin.css";
 @import "./signup.css";
 
-/* * {
+* {
     border: 1px solid #ff00ff;
     box-sizing: border-box;
     vertical-align: baseline;
-} */
+}
 
 html, body{
     margin: 0;
@@ -66,4 +66,8 @@ h3{
     font-size: 1.5em;
     margin: 0;
     font-family: 'Cabin Sketch', cursive;
+}
+
+.hidden{
+    display: none;
 }
