--- a/views/guide.hbs
+++ b/views/guide.hbs
@@ -1,27 +1,35 @@
 <section class="page guide-page flex">
     <h2>How to use</h2>
-    <article class="guide-article step1 flex">
-        <div class="guide-img">
+    <div class="guide-box" id="guideMdl">
+        <div class="guide-item">
+            <article class="guide-article step1 flex">
+                <div class="guide-img">
 
+                </div>
+                <div class="guide-text">
+                    This is a map (duh). If you're signed in, you can make it nicer with the countries you've visited / put in your wishlist ! You can zoom in and out, how nice is that ? And if you click on a country...
+                </div>
+            </article>
         </div>
-        <div class="guide-text">
-            This is a map (duh). If you're signed in, you can make it nicer with the countries you've visited / put in your wishlist ! You can zoom in and out, how nice is that ? And if you click on a country...
+        <div class="guide-item">
+            <article class="guide-article step2 flex">
+                <div class="guide-img">
+                    
+                </div>
+                <div class="guide-text">
+                    Boom ! You end up on this beautiful page, where you can gather crucial information such as currency and flag. You can also have a look at exclusive tips (and even filter them, yeah that's right).
+                </div>
+            </article>
         </div>
-    </article>
-    <article class="guide-article step2 flex">
-        <div class="guide-img">
-            
+        <div class="guide-item">
+            <article class="guide-article step3 flex">
+                <div class="guide-img">
+                    
+                </div>
+                <div class="guide-text">
+                    Then you have your own dashboard, your own special page just for you, where you can update countries you went to / will go to, access the tips you've written, and look at your username in a very cool font.
+                </div>
+            </article>
         </div>
-        <div class="guide-text">
-            Boom ! You end up on this beautiful page, where you can gather crucial information such as currency and flag. You can also have a look at exclusive tips (and even filter them, yeah that's right).
-        </div>
-    </article>
-    <article class="guide-article step3 flex">
-        <div class="guide-img">
-            
-        </div>
-        <div class="guide-text">
-            Then you have your own dashboard, your own special page just for you, where you can update countries you went to / will go to, access the tips you've written, and look at your username in a very cool font.
-        </div>
-    </article>
+    </div>
 </section>
