--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,8 @@
     <script type="module" src="/js/client.js"></script>
     <script type="module" src="/js/main.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="text/javascript" src="/js/mapdata-1.js"></script>		
+<script  type="text/javascript" src="/js/worldmap.js"></script>
 </head>
 
 <body>
