--- a/views/country.hbs
+++ b/views/country.hbs
@@ -10,8 +10,10 @@
                     <h2>{{country.name}}</h2>
                 </div>
                 <div class="country-header-status">
-                    <button type="button" id="country-status-visited" class="country-status-visited"><i class="fas fa-star"></i> Visited</button>
-                    <button type="button" id="country-status-wishlist" class="country-status-wishlist"><i class="fas fa-heart"></i> Wishlist</button>
+                    <button type="button" id="country-status-visited" class="country-status-visited"><i
+                            class="fas fa-star"></i> Visited</button>
+                    <button type="button" id="country-status-wishlist" class="country-status-wishlist"><i
+                            class="fas fa-heart"></i> Wishlist</button>
                 </div>
             </div>
         </div>
@@ -50,18 +52,18 @@
                 </div>
                 <div class="tip-content">
                     <h3>{{this.name}}</h3>
-                    <span class="tip-location">{{this.city}}, {{this.country}}</span>
+                    <span class="tip-location">{{this.city}}, {{this.country.name}}</span>
                     <hr>
                     <p class="tip-body">{{this.body}}</p>
                     <span class="tip-address">{{this.address}}</span>
-                    <span class="tip-user">{{this.user}}</span>
+                    <span class="tip-user">{{this.user.username}}</span>
                 </div>
             </article>
             {{/each}}
         </div>
         {{/if}}
     </div>
-    <form class="form tip-form hidden" action="/tips/add" method="post">
+    <form class="form tip-form hidden" action="/tips/add/{{country._id}}/{{country.codeName}}" method="post">
         <div class="form-item flex">
             <label for="category" class="form-label">Category</label>
             <select name="category" class="form-input select" id="tip-form-category" required>
@@ -80,7 +82,8 @@
         </div>
         <div class="form-item flex">
             <label for="country" class="form-label">Country</label>
-            <input name="country" class="form-input disabled" id="tip-form-country" type="text" value="{{country.name}}" disabled required>
+            <input name="country" class="form-input disabled" id="tip-form-country" type="text" value="{{country.name}}"
+                disabled required>
         </div>
         <div class="form-item flex">
             <label for="city" class="form-label">City</label>
@@ -88,15 +91,18 @@
         </div>
         <div class="form-item flex">
             <label for="body" class="form-label">Info</label>
-            <textarea name="body" class="form-input textarea" id="tip-form-body" type="text" placeholder="Type here"></textarea>
+            <textarea name="body" class="form-input textarea" id="tip-form-body" type="text"
+                placeholder="Type here"></textarea>
         </div>
         <div class="form-item flex">
             <label for="address" class="form-label">Address</label>
-            <input name="address" class="form-input" id="tip-form-address" type="text" placeholder="12 rue Merlot // Saint-Pierre" required>
+            <input name="address" class="form-input" id="tip-form-address" type="text"
+                placeholder="12 rue Merlot // Saint-Pierre" required>
         </div>
         <div class="form-item flex">
             <label for="user" class="form-label">By</label>
-            <input name="user" class="form-input" id="tip-form-user" type="text" value="{{currentUser.username}}" required>
+            <input name="user" class="form-input" id="tip-form-user" type="text" value="{{currentUser.username}}"
+                required>
         </div>
         <button class="form-button" id="tip-form-button" type="submit">Submit</button>
     </form>
