--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,6 +14,6 @@
     </div>
 </div>
 {{/unless}}
-<section class="page home-page flex">
+<section class="home-page flex">
     <div id="map"></div>
 </section>
