--- a/public/css/tips.css
+++ b/public/css/tips.css
@@ -1,28 +1,44 @@
-.tips-nav button{
-    color: chocolate;
-    cursor: pointer;
+.tips-nav{
+    width: 100%;
+    justify-content: space-evenly;
+    margin-bottom: 2rem;
 }
 
-button.is-active {
-    background: goldenrod;
+.tips-nav button{
+    width: 4rem;
+    color: lightsalmon;
+    cursor: pointer;
+    background: none;
+    padding: 10px;
+    font-size: 1.5em;
+    border: 1px solid black;
+    border-radius: 8px;
+    margin-bottom: 5px;
+}
+
+.tips-category:hover, .tips-nav-add>button:hover{
+    background-color: rgba(255, 255, 255, 0.5)
+}
+
+.tips-category.is-active {
+    border: 2px solid lightsalmon;
+}
+
+button:focus {
+    outline: none;
 }
 
 .tips-box {
-    color: rgb(250, 250, 248);
-    text-shadow: black 0.1em 0.1em 0.2em;
-    font-style: italic;
+    width: 80%;
+    padding: 3rem 1rem;
+    margin-bottom: 3rem;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 2rem;
 }
 
-.form-item {
-    /* justify-content: space-evenly; */
-
-}
-
-label.form-label {
-    margin-right: 5%;
-}
-
-.form-button {
+#tip-form-button {
     display: inline-block;
     padding: 1% 5%;
     margin-top: 2%;
@@ -30,4 +46,49 @@ label.form-label {
     background: chocolate;
     color: rgb(250, 250, 248);
     text-shadow: black 0.1em 0.1em 0.2em;
+}
+
+.tips-box>p{
+    align-items: center;
+    color: rgb(250, 250, 248);
+    text-shadow: black 0.1em 0.1em 0.2em;
+    font-style: italic;
+}
+
+hr{
+    border: 0.5px solid black;
+}
+
+.tips-list{
+    padding: 2rem 5rem;
+}
+
+.tip-content{
+    padding: 1.5rem 3rem;
+}
+
+.tip-head *{
+    display: inline-block;
+    margin-bottom: 0;
+}
+
+.tip-location{
+    margin-top: 0;
+    margin-bottom: 2rem;
+    font-size: 0.8em;
+}
+
+.tip-body{
+    margin-bottom: 2rem;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.tip-address{
+    font-size: 0.8em;
+}
+
+.tip-user{
+    font-size: 0.8em;
+    color: rgb(110, 110, 110);
 }
