added search result click listeners

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,3 +75,12 @@ h3{
 tspan{
     display: none;
 }
+
+#country-results {
+    max-height: 100px;
+    overflow-y: auto;
+}
+
+/* #quick-search {
+    z-index: 1;
+} */
