--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,6 +15,8 @@
 </div>
 {{/unless}}
 <section class="home-page flex">
+    <div>
+        {{> searchBar}}
+    </div>
     <div id="map"></div>
-    {{> searchBar}}
 </section>
