--- a/views/partials/searchBar.hbs
+++ b/views/partials/searchBar.hbs
@@ -1,5 +1,10 @@
-<div>
+<div id="quick-search">
     <form action="" method="post">
         <input type="text" name="search-bar" id="search-bar">
     </form>
+    <label for="search-bar">Quick Search a Country:</label>
+
+    <datalist id="country-results" style="display: block">
+    
+    </datalist>
 </div>
